--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm-run-all --parallel spa api-server",
+    "start": "npm-run-all --parallel spa api-server management-server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -12,8 +12,10 @@
     "server:dev": "nodemon server.js",
     "api-server": "node api-server.js",
     "api-server:dev": "nodemon api-server.js",
-    "dev": "npm-run-all --parallel spa api-server:dev",
-    "prod": "npm-run-all --parallel server api-server"
+    "management-server": "node management-server.js",
+    "management-server:dev": "nodemon management-server.js",
+    "dev": "npm-run-all --parallel spa api-server:dev management-server:dev",
+    "prod": "npm-run-all --parallel server api-server management-server"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.4.0",
@@ -23,10 +25,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2",
     "@fortawesome/free-solid-svg-icons": "^5.8",
     "@fortawesome/react-fontawesome": "^0.2",
+    "auth0": "^4.28.0",
     "autoprefixer": "^10.4",
     "cors": "^2.8",
     "express": "^4.18",
     "express-oauth2-jwt-bearer": "^1.6.0",
+    "express-rate-limit": "^8.0.1",
     "helmet": "^4.4",
     "highlight.js": "^10.0",
     "morgan": "^1.9",
